<resources>
    <string name="a11y_no_data">No data</string>
    <string name="a11y_no_permission">No permission to access data</string>
    <string name="a11y_template_range">%1$f of %2$f</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_point_names_action">Access Point Names</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_feature_state_off">Off</string>
    <string name="accessibility_feature_state_on">On</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_menu_item_settings">Settings</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_power_button">Power button ends call</string>
    <string name="accessibility_service_default_description">No description provided.</string>
    <string name="action_accessibility_color_inversion">Color inversion</string>
    <string name="action_accessibility_large_text">Large font</string>
    <string name="action_accessibility_magnification">Magnification gestures</string>
    <string name="action_lock_none">None</string>
    <string name="action_lock_password">Password</string>
    <string name="action_lock_pattern">Pattern</string>
    <string name="action_lock_pin">PIN</string>
    <string name="action_open_on_phone">Open on phone</string>
    <string name="app_name">Settings</string>
    <string name="default_sms_title">Default SMS app</string>
    <string name="draw_over_other_apps_dialog_description">This feature allows an app to display on top of other apps you’re using. It may interfere with your use of those apps or change the way they seem to appear or behave.</string>
    <string name="draw_over_other_apps_dialog_title">Display over other apps?</string>
    <string name="emergency_dialer_title">Emergency call</string>
    <string name="enable_ambient_screen">Always-on screen reduces battery life.</string>
    <string name="enable_ambient_screen_subtitle">Turn on?</string>
    <string name="enable_tilt_to_wake">Tilt-to-wake reduces battery life.</string>
    <string name="heytap_cellularToggle">Mobile data</string>
    <string name="heytap_screenon_animation">Live watch face</string>
    <string name="heytap_screenon_animation_dialog_title">Live watch faces will play animations automatically when you wake the watch screen. This will consume more battery power.</string>
    <string name="info_label_home_app">Home App</string>
    <string name="info_label_os_version">System version</string>
    <string name="info_label_security_patch">Android security patch level</string>
    <string name="info_label_version">Versions</string>
    <string name="info_label_wear_os_version">Wear OS by Google</string>
    <string name="main_accessibility">Accessibility</string>
    <string name="main_display">Display</string>
    <string name="main_gestures">Gestures</string>
    <string name="main_sound">Sound</string>
    <string name="pref_about">About</string>
    <string name="pref_accessibilityVolume">Accessibility volume</string>
    <string name="pref_advancedSettings">Advanced</string>
    <string name="pref_alarmVolume">Alarm volume</string>
    <string name="pref_alwaysOnScreen">Always-on screen</string>
    <string name="pref_autoDateTime">Automatic date &amp; time</string>
    <string name="pref_autoTimeZone">Automatic time zone</string>
    <string name="pref_callForwarding">Call forwarding from phone</string>
    <string name="pref_callForwarding_infoMessage">To learn how to forward calls from your phone to your watch, open this help page.</string>
    <string name="pref_callForwarding_infoTitle">Set up call forwarding</string>
    <string name="pref_callForwarding_turnOff">Turn off call forwarding</string>
    <string name="pref_callForwarding_turnOn">Turn on call forwarding</string>
    <string name="pref_cellular">Mobile</string>
    <string name="pref_cellularToggle">Mobile</string>
    <string name="pref_changeSimPin">Change SIM PIN</string>
    <string name="pref_dataRoaming">Data roaming</string>
    <string name="pref_dataRoaming_dialogMessage">Allow data usage when roaming? Roaming charges may apply.</string>
    <string name="pref_dataRoaming_dialogTitle">Attention</string>
    <string name="pref_dataUsage">Data usage</string>
    <string name="pref_dateTime">Date &amp; time</string>
    <string name="pref_defaultSms">Default SMS app</string>
    <string name="pref_draw_over_other_apps_title">Display over other apps</string>
    <string name="pref_esimProfile">eSIM</string>
    <string name="pref_esim_available_profile_title">eSIM Profiles</string>
    <string name="pref_esim_test_util_activation_state">eSIM Activated</string>
    <string name="pref_esim_test_util_text_twinning_state">Text Twinning</string>
    <string name="pref_esim_test_util_title">Certification Test Utilities</string>
    <string name="pref_esim_test_util_voice_twinning_state">Voice Twinning</string>
    <string name="pref_hourFormat">Use 24-hour format</string>
    <string name="pref_lockSimCard">Require SIM lock</string>
    <string name="pref_manualDate">Set date</string>
    <string name="pref_manualTime">Set time</string>
    <string name="pref_manualTimeZone">Set time zone</string>
    <string name="pref_manualTimeZone_dialogTitle">Select time zone</string>
    <string name="pref_mediaVolume">Media volume</string>
    <string name="pref_phoneNumber">Displayed phone number</string>
    <string name="pref_praisethesun">Sunlight Boost</string>
    <string name="pref_resumeData">Resume data</string>
    <string name="pref_resumeData_dialogMessage">"You've reached your mobile data limit. Resuming may lead to charges from your carrier."</string>
    <string name="pref_resumeData_dialogTitle">Resume data?</string>
    <string name="pref_ringVolume">Ring volume</string>
    <string name="pref_screenLock">Screen lock</string>
    <string name="pref_screenOrientation">Screen Orientation</string>
    <string name="pref_screenOrientation_labelLeftWrist">Left wrist</string>
    <string name="pref_screenOrientation_labelRightWrist">Right wrist</string>
    <string name="pref_simStatus">SIM status</string>
    <string name="pref_tiltToBright">Power saver tilt</string>
    <string name="pref_tiltToWake">Tilt-to-wake</string>
    <string name="pref_touchToWakeAlt">Touch-to-wake</string>
    <string name="pref_unlockSim">Unlock SIM</string>
    <string name="pref_vibrateForCalls">Also vibrate for calls</string>
    <string name="pref_voicemailNumber">Voicemail number</string>
    <string name="pref_watchRingtone">Watch ringtone</string>
    <string name="pref_watchface">@string/change_watch_face</string>
    <string name="pref_wifi">Wi-Fi</string>
    <string name="pref_wristGesturesMenu">For navigation</string>
    <string name="pref_write_settings_title">Modify system settings</string>
    <string name="secure_adb_cancel">Cancel</string>
    <string name="secure_adb_confirmation_title">Allow Debugging?</string>
    <string name="secure_adb_ok">OK</string>
    <string name="secure_adb_view_fingerprint">View fingerprint</string>
    <string name="secure_adb_whitelist_label">Always allow from this computer</string>
    <string name="sim_status_title_eid">EID</string>
    <string name="sim_status_title_iccid">ICCID</string>
    <string name="sim_status_title_imei">IMEI</string>
    <string name="sim_status_title_imei_sv">IMEI SV</string>
    <string name="sim_status_title_network">Network</string>
    <string name="sim_status_title_network_state">Network state</string>
    <string name="sim_status_title_network_type">Network type</string>
    <string name="sim_status_title_phone_number">Phone number</string>
    <string name="sim_status_title_roaming_state">Roaming</string>
    <string name="sim_status_title_service_state">Service state</string>
    <string name="sim_status_title_signal_strength">Signal strength</string>
    <string name="ttb_education_title">Choose a power saver watch face</string>
    <string name="tts_settings_title">Text-to-speech output</string>
    <string name="wifi_about_automatic_text">"When Wi-Fi is enabled, your watch will automatically turn Wi-Fi on or off to save battery. It responds when: 
 
• An app requires Wi-Fi 
• Battery saver is on 
• Watch is charging 
• Watch is updating 
• Watch is away from phone 
• Watch can't connect to Wi-Fi 
• Some other situations"</string>
    <string name="wifi_about_automatic_title">About Wi-Fi</string>
    <string name="wifi_add_network_action">Add network</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_saved_networks_title">Saved networks</string>
    <string name="write_settings_dialog_description">This permission allows an app to modify system settings.</string>
    <string name="write_settings_dialog_title">Modify system settings?</string>
</resources>